--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-deprecation",
-  "version": "0.0.0-development",
+  "version": "1.2.2-alpha.1",
   "description": "ESLint rule that reports usage of deprecated code",
   "author": "Alex Malkevich <malkevich.alex@gmail.com>",
   "license": "LGPL-3.0-or-later",
